2005-11-11 Magnus Hagdorn
 * plot_seds_profile.py: new prog for plotting sediment profiles

2005-10-03 Magnus Hagdorn
 * erosion_types.f90: new switch to enable sliding velo calculations
 * erosion_sediment.f90: use new switch to enable sliding velo calculations
 * erosion_setup.f90: load switch from config file

2005-10-03 Magnus Hagdorn
 * erosion_types.f90: increase number of parameters
 * erosion_sediment.f90: bug fix and use precense of basal water to 
   determine if erosion happens, add function for calculating basal 
   traction parameter based on moving sediments
 * eis_erosion.f90: use new glide API
 * simple_erosion.f90: ditto
 * Makefile.am: add python dir
 * configure.in: ditto
 * Makefile.am: new
 * erosion.cpt: colour map for sediments
 * plot_seds.py: plotting sediment thicknesses
 
2005-08-18 Magnus Hagdorn
 * add figure to doc

2005-08-11 Magnus Hagdorn
 * advect_2ndmo.f90: fix bug with wrong index
 * erosion_sediment.f90: fix bug
 * erosion_vars.def: add variables for magnitude and direction of 
   basal shear stress

2005-07-15 Magnus Hagdorn
 * erosion.f90: fix bug where old sed2 thick calculations were called
   in every case
 * erosion_types.f90: moved field variables from sediment type to
   erosion type
 * erosion_sediment.f90: make basal shear stress transform available 
   to other modules, use fields from erosion type
 * erosion_transport.f90: call basal shear stress transform and use it,
   avoid copying data
 * er-transport1.config: update to use new calcs

2005-07-15 Magnus Hagdorn
 * erosion_sediment.f90: only use shear-yield stress type flow law, 
   integrate from base of deforming sed layer to top (rather than
   maximum depth), separate function to calculate yield stress, change
   argument of er_sediment_tstep
 * erosion_setup.f90: only have one flow law
 * erosion_transport.f90: change argument of er_sediment_tstep
 * erosion_types.f90: change default values of flow law, only use one
   flow law