@@ -1,3 +1,6 @@
+2005-11-30 Magnus Hagdorn
+ * plot_seds_profile.py: improvements
+
 2005-11-11 Magnus Hagdorn
  * plot_seds_profile.py: new prog for plotting sediment profiles
 
